form html update

--- a/HTML/form.html
+++ b/HTML/form.html
@@ -16,11 +16,24 @@
         <input type="email" id="email" name="email" required placeholder="Enter your email">
         <br><br>
 
+
+        <label for = "" >AGE
+            <input type="number" id="age" name="AGE" required placeholder="Enter your age">
+        </label>
+        <br><br>
+
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required   
         placeholder="Enter your password">
         <br><br>
 
+        <label for = "">date of joining : <input type="date"></label>
+
+        <p>Enter your shirt size:</p>
+        <input type="radio"name="shirtsize" id="small"><label for="small">small size </label>
+        <input type="radio"name="shirtsize" id = "medium"><label for="medium">medium size</label>
+        <input type="radio"name="shirtsize"id= "large"><label for="large">large size</label>
+        
     </form>
 </body>
 </html>
