--- a/HTML/form.html
+++ b/HTML/form.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>Forms in html</h2>
-    <form action="">
+    <form action="image.html">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required placeholder="Enter your name">
         <br><br>
@@ -34,6 +34,34 @@
         <input type="radio"name="shirtsize" id = "medium"><label for="medium">medium size</label>
         <input type="radio"name="shirtsize"id= "large"><label for="large">large size</label>
         
+        <br><br>
+
+        <p>select the known language:</p>
+        <input type="checkbox"name="language" id="english"><label for="english">english </label>
+        <input type="checkbox"name="language" id = "hindi"><label for="hindi">hindi</label>
+        <input type="checkbox"name="language"id= "telgu"><label for="telgu">telgu</label>
+        <br><br>
+
+        <label for = "color">please selet the color for your shirt: <input type="color"></label>
+
+        <br><br>
+        <label for="paymentoption">please select a payment method: </label>
+        <select name="paymentoption" id="paymentoption">
+            <option value="" disabled selected>Select a payment method</option>
+            <option value="creditcard">Credit Card</option>
+            <option value="debitcard">Debit Card</option>
+            <option value="paypal">PayPal</option>
+            <option value="banktransfer">Bank Transfer</option>
+        </select>
+        <br><br>
+        <label for="">please provide your valuable feedback: </label>
+        
+        <textarea name="feedback    " id="feedback"></textarea>
+
+        <br><br>
+
+        <input type= "reset" value="reset">
+        <input type="submit" value="submit">
     </form>
 </body>
 </html>
