--- a/CSS/index.html
+++ b/CSS/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>intro to CSS</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <!-- <style>
         body {
             background-color: lightgray;
@@ -30,13 +31,13 @@
     </style> -->
 </head>
 <body>
-    <h2 style = "color : red ; background-color: yellow;">Intro to css </h2>
-    <p style="color:green">Lorem ipsum dolor sit amet,
+    <h2 >Intro to css </h2>
+    <p >Lorem ipsum dolor sit amet,
          consectetur adipisicing elit. Quaerat sapiente veritatis inventore 
          corporis quasi debitis doloremque natus culpa totam.
          Quas commodi laborum sunt culpa esse!
     </p>
-    <input type="submit" value="Submit" style="background-color: lightblue; color: black;">
-    <button style="color:blue;">submit the appln</button>
+    <input type="submit" value="Submit">
+    <button >submit the appln</button>
 </body>
 </html>
