--- a/CSS/cssSelectors.html
+++ b/CSS/cssSelectors.html
@@ -37,27 +37,41 @@
             </p>
         </article>
         <article>
-            <h2 class = "h2Class">class Selectors</h2>
+            <h2 class = "h2Class" id = "h2ClassId">class Selectors</h2>
             <p class = "pClass">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab dolorum quo labore commodi eos similique facilis quia unde quisquam, asperiores, veritatis repellendus. Ex, aliquam sunt.
             </p>
         </article>
-        <article>
+        <article id = "articleId">
             <h2>id Selectors</h2>
             <p id = "pId">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab dolorum quo labore commodi eos similique facilis quia unde quisquam, asperiores, veritatis repellendus. Ex, aliquam sunt.
             </p>
         </article>
-        <article>
+        <article class = "pClass" id = "pClassId">
             <h2>attribute Selectors</h2>
             <p class = "pAttribute">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab dolorum quo labore commodi eos similique facilis quia unde quisquam, asperiores, veritatis repellendus. Ex, aliquam sunt.
             </p>
         </article>
-        <article>
+        <article class = "pClass" id = "pClassId">
             <h2>nested selector</h2>
             <p>Lorem isum dolor sit amet consectetur adipisicing elit. Ad, assumenda! Nobis enim excepturi, animi, esse vitae necessitatibus tenetur fuga repellat odit dolores magni in consequuntur!</p>
         </article>
+        <article>
+            <h2>pseudo-class selector</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, assumenda! Nobis enim excepturi, animi, esse vitae necessitatibus tenetur fuga repellat odit dolores magni in consequuntur!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, assumenda! Nobis enim excepturi, animi, esse vitae necessitatibus tenetur fuga repellat odit dolores magni in consequuntur!</p>
+        </article>
+        <article>
+            <h2>pseudo-element selector</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, assumenda! Nobis enim excepturi, animi, esse vitae necessitatibus tenetur fuga repellat odit dolores magni in consequuntur!</p>
+        </article>
+        <article>
+            <h2>descendant selector</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, assumenda! Nobis enim excepturi, animi, esse vitae necessitatibus tenetur fuga repellat odit dolores magni in consequuntur!</p>
+        </article>
+        <article>
     </body>
 
     <footer>
